--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
     <!-- FAQs -->
     <div class="bg-gray-100 py-16 px-6 mx-auto">
       <div class="max-w-6xl mx-auto"
-        x-data="{ faqs: [{ question: 'How to register?', answer: 'You can register on our website by clicking on the Register button on the homepage. You will be asked to provide your matrimonial information. We will contact you to publish the Ad.', isOpen: false }, { question: 'How to check matrimonial profiles ads?', answer: 'You can check your matrimonial profiles ads by clicking on the religion button on homepage. Once you select your religion, you will be redirected to the religion page where you can see all the matrimonial profiles ads.', isOpen: false }, { question: 'What is the payment method?', answer: 'We accept all modes of payment.', isOpen: false }, { question: 'What is your return policy?', answer: 'As a nature of classifieds, we do not offer a return policy.!', isOpen: false }, { question: 'How many days will my ads be available?', answer: 'We will make your ad available for 7 days.', isOpen: false }, { question: 'How to verify ads?', answer: 'You can verify ads prospective by doing background check in their locality and at Qazi.', isOpen: false }] }">
+        x-data="{ faqs: [{ question: 'How to register?', answer: 'You can register on our website by clicking on the Register button on the homepage. You will be asked to provide your matrimonial information. We will contact you to publish the Ad.', isOpen: false }, { question: 'How to check matrimonial profiles ads?', answer: 'You can check your matrimonial profiles ads by clicking on the religion button on homepage. Once you select your religion, you will be redirected to the religion page where you can see all the matrimonial profiles ads.', isOpen: false }, { question: 'What is the payment method?', answer: 'We accept all modes of payment.', isOpen: false }, { question: 'What is your refund policy?', answer: 'As a nature of classifieds, we do not offer a refund policy.!', isOpen: false }, { question: 'How many days will my ads be available?', answer: 'We will make your ad available for 7 days.', isOpen: false }, { question: 'How to verify ads?', answer: 'You can verify ads prospective by doing background check in their locality and at Qazi.', isOpen: false }] }">
         <div class="text-center mb-12">
           <h2 class="text-3xl font-bold text-gray-900">Frequently Asked Questions</h2>
           <p class="mt-4 text-gray-600">Have questions? We're here to help.</p>
@@ -381,10 +381,10 @@
             <h3 class="text-white text-lg font-semibold mb-4">Our Services</h3>
             <ul class="space-y-2 text-sm">
               <li><a href="/i/" class="hover:text-white transition-colors">Muslim Matrimony</a></li>
-              <li><a href="/h/" class="hover:text-white transition-colors">Hindu Matrimony</a></li>
+              <!-- <li><a href="/h/" class="hover:text-white transition-colors">Hindu Matrimony</a></li>
               <li><a href="/s/" class="hover:text-white transition-colors">Sikh Matrimony</a></li>
               <li><a href="/c/" class="hover:text-white transition-colors">Christian Matrimony</a></li>
-              <li><a href="/j/" class="hover:text-white transition-colors">Jain Matrimony</a></li>
+              <li><a href="/j/" class="hover:text-white transition-colors">Jain Matrimony</a></li> -->
             </ul>
           </div>
           <div>
