--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             Muslim
             <i class="fas fa-external-link-alt ml-2 text-xs text-gray-400"></i>
           </a>
-          <a href="/h/" target="_self"
+          <!-- <a href="/h/" target="_self"
             class="flex items-center px-6 py-2 rounded-full bg-gray-50 hover:bg-gray-100 transition-colors shadow-md">
             Hindu
             <i class="fas fa-external-link-alt ml-2 text-xs text-gray-400"></i>
@@ -301,7 +301,7 @@
             class="flex items-center px-6 py-2 rounded-full bg-gray-50 hover:bg-gray-100 transition-colors shadow-md">
             Jain
             <i class="fas fa-external-link-alt ml-2 text-xs text-gray-400"></i>
-          </a>
+          </a> -->
 
 
         </div>
