--- a/i/index.html
+++ b/i/index.html
@@ -497,7 +497,7 @@
       </button>
     </div>
 
-    <script src="javascript.js"></script>
+    <script src="newjs.js"></script>
     <footer class="mx-auto mt-32 w-full max-w-container px-4 sm:px-6 lg:px-8">
       <div class="border-t border-slate-900/5 py-10"><a href="https://liverishtey.com"
           class="inline-flex items-center justify-center">
