--- a/refund-policy.html
+++ b/refund-policy.html
@@ -6,25 +6,23 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="stylesheet" href="src/output.css">
     <link rel="icon" href="favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="">
     <link rel="icon" type="image/png" sizes="16x16" href="">
-    <link rel="preload" as="style" href="fb087be6.css">
-    <link rel="stylesheet" href="fb087be6.css">
-    <script defer src="https://cdn.tailwindcss.com"></script>
+    <!-- <script defer src="https://cdn.tailwindcss.com"></script> -->
     <meta name="twitter:card" content="summary_large_image" inertia="">
     <meta name="twitter:site" content="@liverishtey" inertia="">
     <meta name="twitter:title" content="Refund Policy" inertia="">
-    <meta name="twitter:description" content="Last updated on June 19, 2023" inertia="">
+    <meta name="twitter:description" content="Last updated on December 26, 2024" inertia="">
     <meta name="twitter:image" content="https://liverishtey.com/img/" inertia="">
     <meta name="twitter:creator" content="@liverishtey" inertia="">
-    <meta property="og:url" content="https://liverishtey.com/" inertia="">
+    <meta property="og:url" content="https://www.liverishtey.com/" inertia="">
     <meta property="og:type" content="article" inertia="">
     <meta property="og:title" content="Refund Policy" inertia="">
-    <meta property="og:description" content="Last updated on November 2, 2021" inertia="">
-    <meta property="og:image" content="https://liverishtey.com/img/" inertia="">
-    <meta property="description" content="Last updated on November 18, 2024" inertia="">
+    <meta property="og:description" content="Last updated on December 26, 2024" inertia="">
+    <meta property="og:image" content="https://www.liverishtey.com/img/" inertia="">
+    <meta property="description" content="Last updated on December 26, 2024" inertia="">
     <title inertia="">Refund Policy - Live Rishtey</title>
 
   </head>
@@ -34,25 +32,15 @@
     <header class="relative z-50 w-full flex-none text-sm font-semibold leading-6 text-slate-900">
       <nav aria-label="Global" class="mx-auto max-w-container px-4 sm:px-6 lg:px-8">
         <div class="relative flex items-center py-[2.125rem]">
-          <div class="absolute inset-x-0 bottom-0 h-px bg-red-600"></div><a href="https://liverishtey.com"
-            class="inline-flex items-center">
-            <svg class="w-6 h-6 ml-2 text-red-600" enable-background="new 0 0 512 512" fill="currentColor"
-              viewBox="0 0 512 512" xml:space="preserve" xmlns="https://www.w3.org/2000/svg">
-              <path
-                d="m354.08 176.93c-37.031 0-71.12 12.818-98.079 34.241-26.959-21.424-61.048-34.241-98.079-34.241-87.079 0-157.92 70.843-157.92 157.92s70.842 157.92 157.92 157.92c37.031 0 71.12-12.818 98.079-34.241 26.959 21.424 61.048 34.241 98.079 34.241 87.079 0 157.92-70.843 157.92-157.92s-70.842-157.92-157.92-157.92zm-196.16 282.45c-68.667 0-124.53-55.864-124.53-124.53 0-68.665 55.864-124.53 124.53-124.53 27.719 0 53.349 9.108 74.064 24.482-22.377 27.258-35.826 62.11-35.826 100.05 0 37.937 13.45 72.789 35.827 100.05-20.714 15.375-46.345 24.483-74.064 24.483zm71.628-124.53c0-28.883 9.886-55.5 26.45-76.648 16.563 21.148 26.45 47.764 26.45 76.648s-9.887 55.5-26.45 76.648c-16.563-21.149-26.45-47.766-26.45-76.648zm124.53 124.53c-27.719 0-53.35-9.108-74.064-24.483 22.377-27.258 35.827-62.11 35.827-100.05 0-37.936-13.449-72.789-35.826-100.05 20.714-15.375 46.345-24.483 74.064-24.483 68.665 0 124.53 55.864 124.53 124.53-1e-3 68.668-55.865 124.53-124.53 124.53z" />
-              <path
-                d="m221.44 150.23c10.507 8.127 24.863 17.46 25.469 17.853l9.09 5.9 9.09-5.9c0.606-0.394 14.96-9.726 25.469-17.853 24.203-18.719 51.985-44.085 51.985-74.342 0-31.246-25.421-56.667-56.667-56.667-10.651 0-20.988 3.013-29.876 8.528-8.888-5.516-19.224-8.528-29.876-8.528-31.246 0-56.667 25.421-56.667 56.667-2e-3 30.257 27.78 55.623 51.983 74.342zm4.683-97.618c6.635 0 12.977 2.853 17.399 7.826l12.477 14.035 12.477-14.034c4.422-4.973 10.764-7.826 17.399-7.826 12.834 0 23.276 10.441 23.276 23.276 0 11.777-13.129 27.903-39.022 47.929-4.383 3.389-9.694 7.131-14.13 10.171-4.437-3.039-9.748-6.781-14.13-10.171-25.893-20.026-39.022-36.152-39.022-47.929 0-12.835 10.441-23.277 23.276-23.277z" />
-            </svg>
-            <span class="ml-2 text-xl font-bold tracking-wide text-red-600 uppercase">liverishtey.com</span>
+          <div class="absolute "></div><a href="https://liverishtey.com" class="inline-flex items-center">
+            <span class="ml-2 text-xl font-bold tracking-wide text-black uppercase">liverishtey.com</span>
           </a>
           <div class="hidden lg:flex lg:items-center">
           </div>
         </div>
       </nav>
     </header>
-    <div class="relative -mt-[5.75rem] overflow-hidden pt-[5.75rem]"><img
-        src="./Privacy Policy - Tailwind UI_files/beams-basic.png" alt=""
-        class="absolute left-1/2 top-0 -ml-[39rem] w-[113.125rem] max-w-none">
+    <div class="relative -mt-[5.75rem] overflow-hidden pt-[5.75rem]">
       <div class="px-4 sm:px-6 lg:px-8">
         <div class="relative mx-auto max-w-[37.5rem] pt-20 text-center pb-24">
           <h1 class="text-4xl font-extrabold tracking-tight text-slate-900 sm:text-5xl">Refund Policy</h1>
@@ -63,30 +51,19 @@
         <div
           class="mx-auto max-w-[40rem] prose-sm prose prose-slate prose-a:font-semibold prose-a:text-sky-700 hover:prose-a:text-sky-700">
           <h1 class="my-2 font-bold pt-4 text-xl uppercase">Refund Policy</h1>
-            <p class="my-2 pt-3 uppercase"> As part of the nature of our business, we do not entertain any refund.</p>
+          <p class="my-2 pt-3 uppercase"> As part of the nature of our business, we do not entertain any refund.</p>
 
         </div>
       </div>
     </div>
     <footer class="mx-auto mt-32 w-full max-w-container px-4 sm:px-6 lg:px-8">
-      <div class="border-t border-slate-900/5 py-10"><a href="https://liverishtey.com"
-          class="inline-flex items-center justify-center">
-          <svg class="w-6 h-6 ml-2 mx-auto text-red-600" enable-background="new 0 0 512 512" fill="currentColor"
-            viewBox="0 0 512 512" xml:space="preserve" xmlns="https://www.w3.org/2000/svg">
-            <path
-              d="m354.08 176.93c-37.031 0-71.12 12.818-98.079 34.241-26.959-21.424-61.048-34.241-98.079-34.241-87.079 0-157.92 70.843-157.92 157.92s70.842 157.92 157.92 157.92c37.031 0 71.12-12.818 98.079-34.241 26.959 21.424 61.048 34.241 98.079 34.241 87.079 0 157.92-70.843 157.92-157.92s-70.842-157.92-157.92-157.92zm-196.16 282.45c-68.667 0-124.53-55.864-124.53-124.53 0-68.665 55.864-124.53 124.53-124.53 27.719 0 53.349 9.108 74.064 24.482-22.377 27.258-35.826 62.11-35.826 100.05 0 37.937 13.45 72.789 35.827 100.05-20.714 15.375-46.345 24.483-74.064 24.483zm71.628-124.53c0-28.883 9.886-55.5 26.45-76.648 16.563 21.148 26.45 47.764 26.45 76.648s-9.887 55.5-26.45 76.648c-16.563-21.149-26.45-47.766-26.45-76.648zm124.53 124.53c-27.719 0-53.35-9.108-74.064-24.483 22.377-27.258 35.827-62.11 35.827-100.05 0-37.936-13.449-72.789-35.826-100.05 20.714-15.375 46.345-24.483 74.064-24.483 68.665 0 124.53 55.864 124.53 124.53-1e-3 68.668-55.865 124.53-124.53 124.53z" />
-            <path
-              d="m221.44 150.23c10.507 8.127 24.863 17.46 25.469 17.853l9.09 5.9 9.09-5.9c0.606-0.394 14.96-9.726 25.469-17.853 24.203-18.719 51.985-44.085 51.985-74.342 0-31.246-25.421-56.667-56.667-56.667-10.651 0-20.988 3.013-29.876 8.528-8.888-5.516-19.224-8.528-29.876-8.528-31.246 0-56.667 25.421-56.667 56.667-2e-3 30.257 27.78 55.623 51.983 74.342zm4.683-97.618c6.635 0 12.977 2.853 17.399 7.826l12.477 14.035 12.477-14.034c4.422-4.973 10.764-7.826 17.399-7.826 12.834 0 23.276 10.441 23.276 23.276 0 11.777-13.129 27.903-39.022 47.929-4.383 3.389-9.694 7.131-14.13 10.171-4.437-3.039-9.748-6.781-14.13-10.171-25.893-20.026-39.022-36.152-39.022-47.929 0-12.835 10.441-23.277 23.276-23.277z" />
-          </svg>
-          <span class="ml-2 mx-auto font-bold tracking-wide text-red-600 uppercase">liverishtey.com</span>
-        </a>
-        <p class="mt-5 text-center text-sm leading-6 text-slate-500">© 2024 Liverishtey Matrimonial & Matchmaking. All
-          rights reserved.
-        </p>
-        <div class="mt-16 flex items-center justify-center space-x-4 text-sm font-semibold leading-6 text-slate-700">
-          <a href="https://liverishtey.com/privacy.html">Privacy policy</a>
-          <div class="h-4 w-px bg-slate-500/20"></div><a href="https://liverishtey.com/terms.html">Terms & Conditions</a>
-        </div>
+      <div class="py-10"><a href="https://liverishtey.com" class="inline-flex items-center justify-center">
+          <div class="mt-16 flex items-center justify-center space-x-4 text-sm font-semibold leading-6 text-slate-700 ">
+            <p>© 2024 Liverishtey Matrimonial & Matchmaking. All
+              rights reserved.</p>
+            <div class="h-4 w-px bg-slate-500/20"></div><a href="https://liverishtey.com/privacy">Privacy policy</a>
+            <div class="h-4 w-px bg-slate-500/20"></div><a href="https://liverishtey.com/terms">Terms & Conditions</a>
+          </div>
       </div>
     </footer>
     </div>
