--- a/index.html
+++ b/index.html
@@ -398,6 +398,13 @@
                 </a>
               </li>
               <li>
+                <a href="https://www.liverishtey.com/contactus.html"
+                  class="flex items-center hover:text-white transition-colors">
+                  <i class="fab fa-telegram mr-2"></i>
+                  Contact Us
+                </a>
+              </li>
+              <li>
                 <a href="mailto:support@liverishtey.com" class="flex items-center hover:text-white transition-colors">
                   <i class="far fa-envelope mr-2"></i>
                   support@liverishtey.com
