--- a/i/index.html
+++ b/i/index.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="Search and post matrimonial ads on Live Rishtey." />
     <meta property="og:url" content="https://liverishtey.com" />
     <meta property="og:image" content="https://liverishtey.com/og-image.jpg" />
-    <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x" defer></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link rel="stylesheet" href="src/output.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
